; ModuleID = '/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm_mem.c_vmm_mem_alloc.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/vmm/extr_vmm_mem.c_vmm_mem_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i8] c"vmm_mem_alloc failed\0A\00", align 1
@XHYVE_PROT_READ = common dso_local global i32 0, align 4
@HV_MEMORY_READ = common dso_local global i32 0, align 4
@XHYVE_PROT_WRITE = common dso_local global i32 0, align 4
@HV_MEMORY_WRITE = common dso_local global i32 0, align 4
@XHYVE_PROT_EXECUTE = common dso_local global i32 0, align 4
@HV_MEMORY_EXEC = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [18 x i8] c"hv_vm_map failed\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @vmm_mem_alloc(i32 %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i64, i64* %5, align 8
  %10 = call i8* @valloc(i64 %9)
  store i8* %10, i8** %7, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %15, label %13

13:                                               ; preds = %3
  %14 = call i32 @xhyve_abort(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  br label %15

15:                                               ; preds = %13, %3
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* @XHYVE_PROT_READ, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %15
  %21 = load i32, i32* @HV_MEMORY_READ, align 4
  br label %23

22:                                               ; preds = %15
  br label %23

23:                                               ; preds = %22, %20
  %24 = phi i32 [ %21, %20 ], [ 0, %22 ]
  store i32 %24, i32* %8, align 4
  %25 = load i32, i32* %6, align 4
  %26 = load i32, i32* @XHYVE_PROT_WRITE, align 4
  %27 = and i32 %25, %26
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %23
  %30 = load i32, i32* @HV_MEMORY_WRITE, align 4
  br label %32

31:                                               ; preds = %23
  br label %32

32:                                               ; preds = %31, %29
  %33 = phi i32 [ %30, %29 ], [ 0, %31 ]
  %34 = load i32, i32* %8, align 4
  %35 = or i32 %34, %33
  store i32 %35, i32* %8, align 4
  %36 = load i32, i32* %6, align 4
  %37 = load i32, i32* @XHYVE_PROT_EXECUTE, align 4
  %38 = and i32 %36, %37
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %42

40:                                               ; preds = %32
  %41 = load i32, i32* @HV_MEMORY_EXEC, align 4
  br label %43

42:                                               ; preds = %32
  br label %43

43:                                               ; preds = %42, %40
  %44 = phi i32 [ %41, %40 ], [ 0, %42 ]
  %45 = load i32, i32* %8, align 4
  %46 = or i32 %45, %44
  store i32 %46, i32* %8, align 4
  %47 = load i8*, i8** %7, align 8
  %48 = load i32, i32* %4, align 4
  %49 = load i64, i64* %5, align 8
  %50 = load i32, i32* %8, align 4
  %51 = call i64 @hv_vm_map(i8* %47, i32 %48, i64 %49, i32 %50)
  %52 = icmp ne i64 %51, 0
  br i1 %52, label %53, label %55

53:                                               ; preds = %43
  %54 = call i32 @xhyve_abort(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  br label %55

55:                                               ; preds = %53, %43
  %56 = load i8*, i8** %7, align 8
  ret i8* %56
}

declare dso_local i8* @valloc(i64) #1

declare dso_local i32 @xhyve_abort(i8*) #1

declare dso_local i64 @hv_vm_map(i8*, i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
